--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Open Graph (para WhatsApp, Facebook, etc.) -->
   <meta property="og:title" content="Polícia identifica e caça golpista que aplica golpes na cidade!" />
   <meta property="og:description" content="A Polícia Civil do Paraná identificou um suspeito de aplicar uma série de golpes financeiros em moradores da cidade de Agudos do Sul." />
-  <meta property="og:image" content="https://www.policiacivil.pr.gov.br/sites/default/arquivos_restritos/files/styles/escala_e_corta_915_555_/public/imagem/2023-10/20230807_pcpr_9568.jpg?itok=eBdNtfxg" />
+  <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.metropolitano.blog.br%2Fnoticia%2Fpolicia-intensifica-buscas-pelo-taxista-joao-coelho-em-agudos-do-sul&psig=AOvVaw3gtUyoVcCcVymobQQBuhow&ust=1754584394529000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCKiFw7bO9o4DFQAAAAAdAAAAABAW" />
   <meta property="og:url" content="https://www.seusite.com.br" />
   <meta property="og:type" content="website" />
 
@@ -115,7 +115,7 @@
 <body>
 
   <!-- Imagem no topo -->
-  <img class="top-image" src="https://www.policiacivil.pr.gov.br/sites/default/arquivos_restritos/files/styles/escala_e_corta_915_555_/public/imagem/2023-10/20230807_pcpr_9568.jpg?itok=eBdNtfxg" 
+  <img class="top-image" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.metropolitano.blog.br%2Fnoticia%2Fpolicia-intensifica-buscas-pelo-taxista-joao-coelho-em-agudos-do-sul&psig=AOvVaw3gtUyoVcCcVymobQQBuhow&ust=1754584394529000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCKiFw7bO9o4DFQAAAAAdAAAAABAW" 
        alt="Droga da elite apreendida" />
 
   <header>
